@@ -2,18 +2,18 @@
 # Copyright (c) 2016-2020 Arkadiusz Bokowy
 
 man1_MANS =
-man8_MANS = bluealsa.man
+man8_MANS = bluealsa.8
 
 if ENABLE_APLAY
-man1_MANS += bluealsa-aplay.man
+man1_MANS += bluealsa-aplay.1
 endif
 
 if ENABLE_RFCOMM
-man1_MANS += bluealsa-rfcomm.man
+man1_MANS += bluealsa-rfcomm.1
 endif
 
-SUFFIXES = -manpage.md .man
+SUFFIXES = .rst
 MOSTLYCLEANFILES = $(man1_MANS) $(man8_MANS)
 
--manpage.md.man:
-	$(SED) 's/\$$VERSION\$$/@PACKAGE_STRING@/' $< | $(PANDOC) -s -f markdown -t man -o $@
+.rst:
+	$(SED) 's/\$$VERSION\$$/@PACKAGE_STRING@/' $< | $(RST2MAN) - $@
